# aerial_msgs

./: CMakeLists.txt  README.md  package.xml
zephyr/: CMakeLists.txt  Kconfig  module.yml
